# async-hdf5-demo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
notebooks/: 01-explore.ipynb  02-performance.ipynb  03-virtual.ipynb  04-memory.ipynb  05-performance-s3.ipynb
